platform/healthchecks/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: healthchecks
  name: healthchecks
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: healthchecks
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web
